lib/parser/SimpleCParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 SimpleC.g 2014-06-02 01:01:03

var SimpleCParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    SimpleCParser.superclass.constructor.call(this, input, state);

    this.dfa2 = new SimpleCParser.DFA2(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(SimpleCParser, {
    EOF: -1,
    T__7: 7,
    T__8: 8,
    T__9: 9,
    T__10: 10,
    T__11: 11,
    T__12: 12,
    T__13: 13,
    T__14: 14,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    ID: 4,
    INT: 5,
    WS: 6
});

(function(){
// public class variables
var EOF= -1,
    T__7= 7,
    T__8= 8,
    T__9= 9,
    T__10= 10,
    T__11= 11,
    T__12= 12,
    T__13= 13,
    T__14= 14,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    ID= 4,
    INT= 5,
    WS= 6;

// public instance methods/vars
org.antlr.lang.extend(SimpleCParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return SimpleCParser.tokenNames; },
    getGrammarFileName: function() { return "SimpleC.g"; }
});
org.antlr.lang.augmentObject(SimpleCParser.prototype, {

    // inline static return class
    program_return: (function() {
        SimpleCParser.program_return = function(){};
        org.antlr.lang.extend(SimpleCParser.program_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:8:1: program : ( declaration )+ ;
    // $ANTLR start "program"
    program: function() {
        var retval = new SimpleCParser.program_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var declaration1 = null;


        try {
            // SimpleC.g:9:5: ( ( declaration )+ )
            // SimpleC.g:9:9: ( declaration )+
            root_0 = this.adaptor.nil();

            // SimpleC.g:9:9: ( declaration )+
            var cnt1=0;
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==ID||(LA1_0>=11 && LA1_0<=13)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // SimpleC.g:9:9: declaration
                    this.pushFollow(SimpleCParser.FOLLOW_declaration_in_program35);
                    declaration1=this.declaration();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, declaration1.getTree());


                    break;

                default :
                    if ( cnt1 >= 1 ) {
                        break loop1;
                    }
                        var eee = new org.antlr.runtime.EarlyExitException(1, this.input);
                        throw eee;
                }
                cnt1++;
            } while (true);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    declaration_return: (function() {
        SimpleCParser.declaration_return = function(){};
        org.antlr.lang.extend(SimpleCParser.declaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:12:1: declaration : ( variable | functionHeader ';' | functionHeader block );
    // $ANTLR start "declaration"
    declaration: function() {
        var retval = new SimpleCParser.declaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal4 = null;
         var variable2 = null;
         var functionHeader3 = null;
         var functionHeader5 = null;
         var block6 = null;

        var char_literal4_tree=null;

        try {
            // SimpleC.g:22:5: ( variable | functionHeader ';' | functionHeader block )
            var alt2=3;
            alt2 = this.dfa2.predict(this.input);
            switch (alt2) {
                case 1 :
                    // SimpleC.g:22:9: variable
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_variable_in_declaration57);
                    variable2=this.variable();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, variable2.getTree());


                    break;
                case 2 :
                    // SimpleC.g:23:9: functionHeader ';'
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_functionHeader_in_declaration67);
                    functionHeader3=this.functionHeader();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, functionHeader3.getTree());
                    char_literal4=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_declaration69); 
                    char_literal4_tree = this.adaptor.create(char_literal4);
                    this.adaptor.addChild(root_0, char_literal4_tree);

                    console.log((functionHeader3!==null?functionHeader3.name:null)+" is a declaration");


                    break;
                case 3 :
                    // SimpleC.g:25:9: functionHeader block
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_functionHeader_in_declaration82);
                    functionHeader5=this.functionHeader();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, functionHeader5.getTree());
                    this.pushFollow(SimpleCParser.FOLLOW_block_in_declaration84);
                    block6=this.block();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, block6.getTree());
                    console.log((functionHeader5!==null?functionHeader5.name:null)+" is a definition");


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    variable_return: (function() {
        SimpleCParser.variable_return = function(){};
        org.antlr.lang.extend(SimpleCParser.variable_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:29:1: variable : type declarator ';' ;
    // $ANTLR start "variable"
    variable: function() {
        var retval = new SimpleCParser.variable_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal9 = null;
         var type7 = null;
         var declarator8 = null;

        var char_literal9_tree=null;

        try {
            // SimpleC.g:30:5: ( type declarator ';' )
            // SimpleC.g:30:9: type declarator ';'
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCParser.FOLLOW_type_in_variable106);
            type7=this.type();

            this.state._fsp--;

            this.adaptor.addChild(root_0, type7.getTree());
            this.pushFollow(SimpleCParser.FOLLOW_declarator_in_variable108);
            declarator8=this.declarator();

            this.state._fsp--;

            this.adaptor.addChild(root_0, declarator8.getTree());
            char_literal9=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_variable110); 
            char_literal9_tree = this.adaptor.create(char_literal9);
            this.adaptor.addChild(root_0, char_literal9_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    declarator_return: (function() {
        SimpleCParser.declarator_return = function(){};
        org.antlr.lang.extend(SimpleCParser.declarator_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:33:1: declarator : ID ;
    // $ANTLR start "declarator"
    declarator: function() {
        var retval = new SimpleCParser.declarator_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ID10 = null;

        var ID10_tree=null;

        try {
            // SimpleC.g:34:5: ( ID )
            // SimpleC.g:34:9: ID
            root_0 = this.adaptor.nil();

            ID10=this.match(this.input,ID,SimpleCParser.FOLLOW_ID_in_declarator129); 
            ID10_tree = this.adaptor.create(ID10);
            this.adaptor.addChild(root_0, ID10_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    functionHeader_return: (function() {
        SimpleCParser.functionHeader_return = function(){};
        org.antlr.lang.extend(SimpleCParser.functionHeader_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:37:1: functionHeader returns [String name] : type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' ;
    // $ANTLR start "functionHeader"
    functionHeader: function() {
        var retval = new SimpleCParser.functionHeader_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ID12 = null;
        var char_literal13 = null;
        var char_literal15 = null;
        var char_literal17 = null;
         var type11 = null;
         var formalParameter14 = null;
         var formalParameter16 = null;

        var ID12_tree=null;
        var char_literal13_tree=null;
        var char_literal15_tree=null;
        var char_literal17_tree=null;


            name=null; // for now you must init here rather than in 'returns'

        try {
            // SimpleC.g:41:5: ( type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' )
            // SimpleC.g:41:9: type ID '(' ( formalParameter ( ',' formalParameter )* )? ')'
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCParser.FOLLOW_type_in_functionHeader158);
            type11=this.type();

            this.state._fsp--;

            this.adaptor.addChild(root_0, type11.getTree());
            ID12=this.match(this.input,ID,SimpleCParser.FOLLOW_ID_in_functionHeader160); 
            ID12_tree = this.adaptor.create(ID12);
            this.adaptor.addChild(root_0, ID12_tree);

            char_literal13=this.match(this.input,8,SimpleCParser.FOLLOW_8_in_functionHeader162); 
            char_literal13_tree = this.adaptor.create(char_literal13);
            this.adaptor.addChild(root_0, char_literal13_tree);

            // SimpleC.g:41:21: ( formalParameter ( ',' formalParameter )* )?
            var alt4=2;
            var LA4_0 = this.input.LA(1);

            if ( (LA4_0==ID||(LA4_0>=11 && LA4_0<=13)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // SimpleC.g:41:23: formalParameter ( ',' formalParameter )*
                    this.pushFollow(SimpleCParser.FOLLOW_formalParameter_in_functionHeader166);
                    formalParameter14=this.formalParameter();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, formalParameter14.getTree());
                    // SimpleC.g:41:39: ( ',' formalParameter )*
                    loop3:
                    do {
                        var alt3=2;
                        var LA3_0 = this.input.LA(1);

                        if ( (LA3_0==9) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                        case 1 :
                            // SimpleC.g:41:41: ',' formalParameter
                            char_literal15=this.match(this.input,9,SimpleCParser.FOLLOW_9_in_functionHeader170); 
                            char_literal15_tree = this.adaptor.create(char_literal15);
                            this.adaptor.addChild(root_0, char_literal15_tree);

                            this.pushFollow(SimpleCParser.FOLLOW_formalParameter_in_functionHeader172);
                            formalParameter16=this.formalParameter();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, formalParameter16.getTree());


                            break;

                        default :
                            break loop3;
                        }
                    } while (true);



                    break;

            }

            char_literal17=this.match(this.input,10,SimpleCParser.FOLLOW_10_in_functionHeader180); 
            char_literal17_tree = this.adaptor.create(char_literal17);
            this.adaptor.addChild(root_0, char_literal17_tree);

            retval.name = (ID12?ID12.getText():null);



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    formalParameter_return: (function() {
        SimpleCParser.formalParameter_return = function(){};
        org.antlr.lang.extend(SimpleCParser.formalParameter_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:45:1: formalParameter : type declarator ;
    // $ANTLR start "formalParameter"
    formalParameter: function() {
        var retval = new SimpleCParser.formalParameter_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var type18 = null;
         var declarator19 = null;


        try {
            // SimpleC.g:46:5: ( type declarator )
            // SimpleC.g:46:9: type declarator
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCParser.FOLLOW_type_in_formalParameter202);
            type18=this.type();

            this.state._fsp--;

            this.adaptor.addChild(root_0, type18.getTree());
            this.pushFollow(SimpleCParser.FOLLOW_declarator_in_formalParameter204);
            declarator19=this.declarator();

            this.state._fsp--;

            this.adaptor.addChild(root_0, declarator19.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    type_return: (function() {
        SimpleCParser.type_return = function(){};
        org.antlr.lang.extend(SimpleCParser.type_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:49:1: type : ( 'int' | 'char' | 'void' | ID );
    // $ANTLR start "type"
    type: function() {
        var retval = new SimpleCParser.type_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var set20 = null;

        var set20_tree=null;

        try {
            // SimpleC.g:50:5: ( 'int' | 'char' | 'void' | ID )
            // SimpleC.g:
            root_0 = this.adaptor.nil();

            set20=this.input.LT(1);
            if ( this.input.LA(1)==ID||(this.input.LA(1)>=11 && this.input.LA(1)<=13) ) {
                this.input.consume();
                this.adaptor.addChild(root_0, this.adaptor.create(set20));
                this.state.errorRecovery=false;
            }
            else {
                var mse = new org.antlr.runtime.MismatchedSetException(null,this.input);
                throw mse;
            }




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    block_return: (function() {
        SimpleCParser.block_return = function(){};
        org.antlr.lang.extend(SimpleCParser.block_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:56:1: block : '{' ( variable )* ( stat )* '}' ;
    // $ANTLR start "block"
    block: function() {
        var retval = new SimpleCParser.block_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal21 = null;
        var char_literal24 = null;
         var variable22 = null;
         var stat23 = null;

        var char_literal21_tree=null;
        var char_literal24_tree=null;

        try {
            // SimpleC.g:57:5: ( '{' ( variable )* ( stat )* '}' )
            // SimpleC.g:57:9: '{' ( variable )* ( stat )* '}'
            root_0 = this.adaptor.nil();

            char_literal21=this.match(this.input,14,SimpleCParser.FOLLOW_14_in_block293); 
            char_literal21_tree = this.adaptor.create(char_literal21);
            this.adaptor.addChild(root_0, char_literal21_tree);

            // SimpleC.g:58:13: ( variable )*
            loop5:
            do {
                var alt5=2;
                var LA5_0 = this.input.LA(1);

                if ( (LA5_0==ID) ) {
                    var LA5_2 = this.input.LA(2);

                    if ( (LA5_2==ID) ) {
                        alt5=1;
                    }


                }
                else if ( ((LA5_0>=11 && LA5_0<=13)) ) {
                    alt5=1;
                }


                switch (alt5) {
                case 1 :
                    // SimpleC.g:58:13: variable
                    this.pushFollow(SimpleCParser.FOLLOW_variable_in_block307);
                    variable22=this.variable();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, variable22.getTree());


                    break;

                default :
                    break loop5;
                }
            } while (true);

            // SimpleC.g:59:13: ( stat )*
            loop6:
            do {
                var alt6=2;
                var LA6_0 = this.input.LA(1);

                if ( ((LA6_0>=ID && LA6_0<=INT)||(LA6_0>=7 && LA6_0<=8)||LA6_0==14||LA6_0==16) ) {
                    alt6=1;
                }


                switch (alt6) {
                case 1 :
                    // SimpleC.g:59:13: stat
                    this.pushFollow(SimpleCParser.FOLLOW_stat_in_block322);
                    stat23=this.stat();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, stat23.getTree());


                    break;

                default :
                    break loop6;
                }
            } while (true);

            char_literal24=this.match(this.input,15,SimpleCParser.FOLLOW_15_in_block333); 
            char_literal24_tree = this.adaptor.create(char_literal24);
            this.adaptor.addChild(root_0, char_literal24_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    stat_return: (function() {
        SimpleCParser.stat_return = function(){};
        org.antlr.lang.extend(SimpleCParser.stat_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:63:1: stat : ( forStat | expr ';' | block | assignStat ';' | ';' );
    // $ANTLR start "stat"
    stat: function() {
        var retval = new SimpleCParser.stat_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal27 = null;
        var char_literal30 = null;
        var char_literal31 = null;
         var forStat25 = null;
         var expr26 = null;
         var block28 = null;
         var assignStat29 = null;

        var char_literal27_tree=null;
        var char_literal30_tree=null;
        var char_literal31_tree=null;

        try {
            // SimpleC.g:63:5: ( forStat | expr ';' | block | assignStat ';' | ';' )
            var alt7=5;
            switch ( this.input.LA(1) ) {
            case 16:
                alt7=1;
                break;
            case ID:
                var LA7_2 = this.input.LA(2);

                if ( (LA7_2==17) ) {
                    alt7=4;
                }
                else if ( (LA7_2==7||(LA7_2>=18 && LA7_2<=20)) ) {
                    alt7=2;
                }
                else {
                    var nvae =
                        new org.antlr.runtime.NoViableAltException("", 7, 2, this.input);

                    throw nvae;
                }
                break;
            case INT:
            case 8:
                alt7=2;
                break;
            case 14:
                alt7=3;
                break;
            case 7:
                alt7=5;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 7, 0, this.input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // SimpleC.g:63:7: forStat
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_forStat_in_stat345);
                    forStat25=this.forStat();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, forStat25.getTree());


                    break;
                case 2 :
                    // SimpleC.g:64:7: expr ';'
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_expr_in_stat353);
                    expr26=this.expr();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, expr26.getTree());
                    char_literal27=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_stat355); 
                    char_literal27_tree = this.adaptor.create(char_literal27);
                    this.adaptor.addChild(root_0, char_literal27_tree);



                    break;
                case 3 :
                    // SimpleC.g:65:7: block
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_block_in_stat369);
                    block28=this.block();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, block28.getTree());


                    break;
                case 4 :
                    // SimpleC.g:66:7: assignStat ';'
                    root_0 = this.adaptor.nil();

                    this.pushFollow(SimpleCParser.FOLLOW_assignStat_in_stat377);
                    assignStat29=this.assignStat();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, assignStat29.getTree());
                    char_literal30=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_stat379); 
                    char_literal30_tree = this.adaptor.create(char_literal30);
                    this.adaptor.addChild(root_0, char_literal30_tree);



                    break;
                case 5 :
                    // SimpleC.g:67:7: ';'
                    root_0 = this.adaptor.nil();

                    char_literal31=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_stat387); 
                    char_literal31_tree = this.adaptor.create(char_literal31);
                    this.adaptor.addChild(root_0, char_literal31_tree);



                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    forStat_return: (function() {
        SimpleCParser.forStat_return = function(){};
        org.antlr.lang.extend(SimpleCParser.forStat_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:70:1: forStat : 'for' '(' assignStat ';' expr ';' assignStat ')' block ;
    // $ANTLR start "forStat"
    forStat: function() {
        var retval = new SimpleCParser.forStat_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal32 = null;
        var char_literal33 = null;
        var char_literal35 = null;
        var char_literal37 = null;
        var char_literal39 = null;
         var assignStat34 = null;
         var expr36 = null;
         var assignStat38 = null;
         var block40 = null;

        var string_literal32_tree=null;
        var char_literal33_tree=null;
        var char_literal35_tree=null;
        var char_literal37_tree=null;
        var char_literal39_tree=null;

        try {
            // SimpleC.g:71:5: ( 'for' '(' assignStat ';' expr ';' assignStat ')' block )
            // SimpleC.g:71:9: 'for' '(' assignStat ';' expr ';' assignStat ')' block
            root_0 = this.adaptor.nil();

            string_literal32=this.match(this.input,16,SimpleCParser.FOLLOW_16_in_forStat406); 
            string_literal32_tree = this.adaptor.create(string_literal32);
            this.adaptor.addChild(root_0, string_literal32_tree);

            char_literal33=this.match(this.input,8,SimpleCParser.FOLLOW_8_in_forStat408); 
            char_literal33_tree = this.adaptor.create(char_literal33);
            this.adaptor.addChild(root_0, char_literal33_tree);

            this.pushFollow(SimpleCParser.FOLLOW_assignStat_in_forStat410);
            assignStat34=this.assignStat();

            this.state._fsp--;

            this.adaptor.addChild(root_0, assignStat34.getTree());
            char_literal35=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_forStat412); 
            char_literal35_tree = this.adaptor.create(char_literal35);
            this.adaptor.addChild(root_0, char_literal35_tree);

            this.pushFollow(SimpleCParser.FOLLOW_expr_in_forStat414);
            expr36=this.expr();

            this.state._fsp--;

            this.adaptor.addChild(root_0, expr36.getTree());
            char_literal37=this.match(this.input,7,SimpleCParser.FOLLOW_7_in_forStat416); 
            char_literal37_tree = this.adaptor.create(char_literal37);
            this.adaptor.addChild(root_0, char_literal37_tree);

            this.pushFollow(SimpleCParser.FOLLOW_assignStat_in_forStat418);
            assignStat38=this.assignStat();

            this.state._fsp--;

            this.adaptor.addChild(root_0, assignStat38.getTree());
            char_literal39=this.match(this.input,10,SimpleCParser.FOLLOW_10_in_forStat420); 
            char_literal39_tree = this.adaptor.create(char_literal39);
            this.adaptor.addChild(root_0, char_literal39_tree);

            this.pushFollow(SimpleCParser.FOLLOW_block_in_forStat422);
            block40=this.block();

            this.state._fsp--;

            this.adaptor.addChild(root_0, block40.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    assignStat_return: (function() {
        SimpleCParser.assignStat_return = function(){};
        org.antlr.lang.extend(SimpleCParser.assignStat_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:74:1: assignStat : ID '=' expr ;
    // $ANTLR start "assignStat"
    assignStat: function() {
        var retval = new SimpleCParser.assignStat_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ID41 = null;
        var char_literal42 = null;
         var expr43 = null;

        var ID41_tree=null;
        var char_literal42_tree=null;

        try {
            // SimpleC.g:75:5: ( ID '=' expr )
            // SimpleC.g:75:9: ID '=' expr
            root_0 = this.adaptor.nil();

            ID41=this.match(this.input,ID,SimpleCParser.FOLLOW_ID_in_assignStat449); 
            ID41_tree = this.adaptor.create(ID41);
            this.adaptor.addChild(root_0, ID41_tree);

            char_literal42=this.match(this.input,17,SimpleCParser.FOLLOW_17_in_assignStat451); 
            char_literal42_tree = this.adaptor.create(char_literal42);
            this.adaptor.addChild(root_0, char_literal42_tree);

            this.pushFollow(SimpleCParser.FOLLOW_expr_in_assignStat453);
            expr43=this.expr();

            this.state._fsp--;

            this.adaptor.addChild(root_0, expr43.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    expr_return: (function() {
        SimpleCParser.expr_return = function(){};
        org.antlr.lang.extend(SimpleCParser.expr_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // SimpleC.g:78:1: expr : condExpr ;
    // $ANTLR start "expr"
    expr: function() {
        var retval = new SimpleCParser.expr_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var condExpr44 = null;


        try {
            // SimpleC.g:78:5: ( condExpr )
            // SimpleC.g:78:9: condExpr
            root_0 = this.adaptor.nil();

            this.pushFollow(SimpleCParser.FOLLOW_condExpr_in_expr475);
            condExpr44=this.condExpr();

            this.state._fsp--;

            this.adaptor.addChild(root_0, condExpr44.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    condExpr_return: (function() {
